# The-Global-Scourge

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: main.cpp
src/engine/: engine.cpp  engine.h  random.cpp  random.h  resourcemanager.h  resourcemanager.inl  singleton.h  time.cpp  time.h  types.h  vector2d.cpp  vector2d.h
src/engine/file/: directory.cpp  directory.h  file.cpp  file.h
src/engine/graphics/: color.cpp  color.h  coloralpha.cpp  coloralpha.h  font.cpp  font.h  graphics.cpp  graphics.h  showable.cpp  showable.h  text.cpp  text.h  texture.cpp  texture.h  texturedshowable.cpp  texturedshowable.h  texturegroup.cpp  texturegroup.h  transform.cpp  transform.h  view.cpp  view.h  window.cpp  window.h
src/engine/input/: input.cpp  input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  window.cpp  window.h
src/engine/sound/: music.cpp  music.h  sample.cpp  sample.h  sound.cpp  sound.h
src/engine/state/: agent.cpp  agent.h  machine.cpp  machine.h  state.cpp  state.h
src/game/: editorstate.cpp  editorstate.h  game.cpp  game.h  gameendstate.cpp  gameendstate.h  gamestate.cpp  gamestate.h  globalstate.cpp  globalstate.h
src/game/ai/: squad.cpp  squad.h
src/game/brush/: brush.cpp  brush.h  discbrush.cpp  discbrush.h  forestbrush.cpp  forestbrush.h  peakbrush.cpp  peakbrush.h  spherebrush.cpp  spherebrush.h  squarebrush.cpp  squarebrush.h
src/game/camera/: camera.cpp  camera.h
src/game/entity/: abstractentity.cpp  abstractentity.h  abstractmodel.cpp  abstractmodel.h  building.cpp  building.h  buildingmodel.cpp  buildingmodel.h  entity.cpp  (+11 more)
(+78 files in other folders)
